@@ -22,7 +22,8 @@ This release focuses on improving playlist navigation flow.
     - Making changes to the Queue disables Follow-mode for a short time
     - Fixes showing the same song with duplicate song in the Queue
 - Adds Right-Click menu in Artists for whole artist-row
-- Fixes similar named albums ("Best of", "Greatest Hits") sharing the same cover
+- Selects last loaded playlist in Queue's Replace Playlist dialog
+- Fixes similar named albums ("Best of", "Greatest Hits") sharing the same cover (a)
 - Fixes jumping to Queue with "1" shortcut sometimes needed two presses
 - Reducing need to redraw the Queue after manipulating it
 - Reduces memory usage
